# sylvian-singularity

./: .gitignore  .shared  .translate_progress.json  CLAUDE.md  README.md  analyze_cern_data.py  analyze_dimuon_lens.py  analyze_h261.py  analyze_tension.py  attractor_variants.py  benchmark_cifar.py  brain_analyzer.py  brain_cct_analyzer.py  brain_singularity.py  calc  cct_counterexample_search.py  cct_independence_test.py  chemistry_engine.py  compass.py  compass_cct_correlation.py  complex_compass.py  congruence_chain_engine.py  conscious_lm.py  conscious_lm_100m.py  conscious_lm_700m.py  consciousness_bridge.py  consciousness_calc.py  consciousness_engine_proto.py  consciousness_fps.py  constant_verifier.py  convergence_engine.py  convert_anima.py  dfs_engine.py  discovery_loop.py  discrete_cct.py  discrete_fps_test.py  dual_brain_callosum.py  email_draft.md  engine_experiments.py  experiment_anomaly_repulsion.py  (+137 more)
.claude/: ralph-loop.local.md  settings.json
.github/: FUNDING.yml
.growth/: growth_state.json  scan.py
.shared/: CALCULATOR_RULES.md  CLAUDE.md  MATH_ATLAS.md  SECRET.md  atlas_tree.txt  calculators.json  causal_lens.py  (+44 more)
n6-replication/: Dockerfile  README.md  pyproject.toml  requirements.txt  run-tests.sh
n6-replication/registry/: tier2.json
n6-replication/results/: 2026-03-28-090811.json  2026-03-28-091500.json  2026-03-28-091804.json  report.html  report.md
n6-replication/scripts/: run_all.py
n6-replication/src/n6_replication/: __init__.py  __main__.py  cli.py  fetcher.py  parser.py  registry.py  reporter.py  runner.py
n6-replication/src/n6_replication.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
n6-replication/templates/: report.html
n6-replication/tests/: test_parser.py
n6-replication/tests/tier1/: conftest.py  test_bridge_theorem.py  test_conservation.py  test_edge_of_chaos.py  test_euler_product.py  test_golden_zone.py  test_perfect_six.py  test_phase_accel.py  test_singleton_gz.py  test_texas.py  test_uniqueness.py  test_uniqueness_theorem.py
tecsrs/: Cargo.toml
tecsrs/src/: atlas.rs  consciousness.rs  grid.rs  lib.rs  monte_carlo.rs  ode.rs  perfect.rs  search.rs
tools/ph-training/: LICENSE  __init__.py  cli.py  data.py  engine.py  ph.py  pyproject.toml  trainer.py
tools/ph-training/tests/: test_engine.py  test_ph.py
(+4690 files in other folders)
