[project]
name = "n6-replication"
version = "0.1.0"
description = "Independent replication package for perfect number 6 mathematics (1,700+ hypotheses)"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Park, Min Woo"}]
readme = "README.md"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "sympy>=1.9",
    "mpmath>=1.2",
    "jinja2>=3.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0", "torchvision>=0.15"]

[project.scripts]
n6-replicate = "n6_replication.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
