[package]
name = "tecsrs"
version = "0.1.0"
edition = "2021"
description = "TECS-L acceleration library — sieves, search, Monte Carlo, grid, ODE, atlas"

[lib]
name = "tecsrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
regex = "1"
