[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ph-training"
version = "0.1.0"
description = "Persistent Homology based automatic model training pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "logout project", email = "nerve011235@gmail.com"},
]
keywords = ["persistent-homology", "topological-data-analysis", "deep-learning", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "gudhi>=3.10",
    "ripser>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
viz = ["matplotlib>=3.5", "persim>=0.3.0"]

[project.scripts]
ph-train = "ph_training.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
